// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Lumen — 2nd variable: scatter / association (correlation, NOT causation) > scatter geometry: points are (primary y, y2) of one row; L0; fit line only with a claim (snapshot) 1`] = `
{
  "box": {
    "h": 280,
    "padB": 34,
    "padL": 44,
    "padR": 16,
    "padT": 16,
    "w": 480,
  },
  "chartType": "scatter",
  "fitPath": "M 73,226.8 L 435,38.9",
  "maxX": 66,
  "minX": 42,
  "scatterPoints": [
    {
      "level": "L0",
      "phase": "baseline",
      "sx": 73,
      "sy": 226.8,
      "x": 42,
      "y": 55,
    },
    {
      "level": "L0",
      "phase": "baseline",
      "sx": 118.2,
      "sy": 202.9,
      "x": 45,
      "y": 58,
    },
    {
      "level": "L0",
      "phase": "baseline",
      "sx": 103.1,
      "sy": 218.8,
      "x": 44,
      "y": 56,
    },
    {
      "level": "L0",
      "phase": "baseline",
      "sx": 163.5,
      "sy": 170.9,
      "x": 48,
      "y": 62,
    },
    {
      "level": "L0",
      "phase": "baseline",
      "sx": 148.4,
      "sy": 186.9,
      "x": 47,
      "y": 60,
    },
    {
      "level": "L0",
      "phase": "tier2",
      "sx": 238.9,
      "sy": 139,
      "x": 53,
      "y": 66,
    },
    {
      "level": "L0",
      "phase": "tier2",
      "sx": 314.3,
      "sy": 99.1,
      "x": 58,
      "y": 71,
    },
    {
      "level": "L0",
      "phase": "tier2",
      "sx": 359.6,
      "sy": 83.1,
      "x": 61,
      "y": 73,
    },
    {
      "level": "L0",
      "phase": "tier2",
      "sx": 344.5,
      "sy": 91.1,
      "x": 60,
      "y": 72,
    },
    {
      "level": "L0",
      "phase": "tier2",
      "sx": 435,
      "sy": 35.2,
      "x": 66,
      "y": 79,
    },
  ],
  "xTicks": [
    {
      "sx": 44,
      "value": 40.1,
    },
    {
      "sx": 149,
      "value": 47,
    },
    {
      "sx": 254,
      "value": 54,
    },
    {
      "sx": 359,
      "value": 61,
    },
    {
      "sx": 464,
      "value": 67.9,
    },
  ],
  "y0": 52.6,
  "y1": 81.4,
  "yTicks": [
    {
      "sy": 246,
      "y": 52.6,
    },
    {
      "sy": 188.5,
      "y": 59.8,
    },
    {
      "sy": 131,
      "y": 67,
    },
    {
      "sy": 73.5,
      "y": 74.2,
    },
    {
      "sy": 16,
      "y": 81.4,
    },
  ],
}
`;

exports[`Lumen — AI-involvement layer guards (Phase 1, §6.1/§6.3/§6.6/§7) > audience faces re-project the SAME claim; the Family face PRESERVES uncertainty (snapshot) 1`] = `
{
  "family": "Over 10 check-ins, WCPM went up — about 2.7 words/min a week. With only 10 points the true rate could be roughly 2.1 to 3.2 a week, so read this as a direction, not an exact number.",
  "familyRefused": "There are only 2 check-ins so far — too few to call a direction yet.",
  "familySmall": "Over 5 check-ins, WCPM went up — about 1.3 words/min a week. With only 5 points the true rate could be roughly -0.1 to 2.7 a week, so read this as a direction, not an exact number.",
  "iepTeam": "Derived (math): WCPM rose ~2.68 words/min per step (95% interval +2.12 to +3.23; n=10). (Ordinary least-squares trend; the interval is a 95% t-interval on the slope. Descriptive — not a percentile, score, or prediction.)",
  "working": "Derived (math): WCPM rose ~2.68 words/min per step (95% interval +2.12 to +3.23; n=10).",
}
`;

exports[`Lumen — bar chart type (multi-pathway visualization) > bar geometry (snapshot) 1`] = `
{
  "bars": [
    {
      "bh": 133.1,
      "bw": 28,
      "bx": 30,
      "by": 112.9,
      "cx": 44,
      "level": "L0",
      "phase": "baseline",
      "x": 1,
      "y": 42,
    },
    {
      "bh": 142.6,
      "bw": 28,
      "bx": 76.7,
      "by": 103.4,
      "cx": 90.7,
      "level": "L0",
      "phase": "baseline",
      "x": 2,
      "y": 45,
    },
    {
      "bh": 139.4,
      "bw": 28,
      "bx": 123.3,
      "by": 106.6,
      "cx": 137.3,
      "level": "L0",
      "phase": "baseline",
      "x": 3,
      "y": 44,
    },
    {
      "bh": 152.1,
      "bw": 28,
      "bx": 170,
      "by": 93.9,
      "cx": 184,
      "level": "L0",
      "phase": "baseline",
      "x": 4,
      "y": 48,
    },
    {
      "bh": 148.9,
      "bw": 28,
      "bx": 216.7,
      "by": 97.1,
      "cx": 230.7,
      "level": "L0",
      "phase": "baseline",
      "x": 5,
      "y": 47,
    },
    {
      "bh": 167.9,
      "bw": 28,
      "bx": 263.3,
      "by": 78.1,
      "cx": 277.3,
      "level": "L0",
      "phase": "tier2",
      "x": 6,
      "y": 53,
    },
    {
      "bh": 183.7,
      "bw": 28,
      "bx": 310,
      "by": 62.3,
      "cx": 324,
      "level": "L0",
      "phase": "tier2",
      "x": 7,
      "y": 58,
    },
    {
      "bh": 193.3,
      "bw": 28,
      "bx": 356.7,
      "by": 52.7,
      "cx": 370.7,
      "level": "L0",
      "phase": "tier2",
      "x": 8,
      "y": 61,
    },
    {
      "bh": 190.1,
      "bw": 28,
      "bx": 403.3,
      "by": 55.9,
      "cx": 417.3,
      "level": "L0",
      "phase": "tier2",
      "x": 9,
      "y": 60,
    },
    {
      "bh": 209.1,
      "bw": 28,
      "bx": 450,
      "by": 36.9,
      "cx": 464,
      "level": "L0",
      "phase": "tier2",
      "x": 10,
      "y": 66,
    },
  ],
  "baseline": 246,
  "box": {
    "h": 280,
    "padB": 34,
    "padL": 44,
    "padR": 16,
    "padT": 16,
    "w": 480,
  },
  "chartType": "bar",
  "maxX": 10,
  "minX": 1,
  "phaseLines": [
    {
      "fromPhase": "baseline",
      "sx": 254,
      "toPhase": "tier2",
      "x": 5.5,
    },
  ],
  "xTicks": [
    {
      "sx": 44,
      "x": 1,
    },
    {
      "sx": 90.7,
      "x": 2,
    },
    {
      "sx": 137.3,
      "x": 3,
    },
    {
      "sx": 184,
      "x": 4,
    },
    {
      "sx": 230.7,
      "x": 5,
    },
    {
      "sx": 277.3,
      "x": 6,
    },
    {
      "sx": 324,
      "x": 7,
    },
    {
      "sx": 370.7,
      "x": 8,
    },
    {
      "sx": 417.3,
      "x": 9,
    },
    {
      "sx": 464,
      "x": 10,
    },
  ],
  "y0": 0,
  "y1": 72.6,
  "yTicks": [
    {
      "sy": 246,
      "y": 0,
    },
    {
      "sy": 188.5,
      "y": 18.2,
    },
    {
      "sy": 131,
      "y": 36.3,
    },
    {
      "sy": 73.5,
      "y": 54.5,
    },
    {
      "sy": 16,
      "y": 72.6,
    },
  ],
}
`;

exports[`Lumen — certainty grammar (design §6.4) > encodes every level (snapshot) 1`] = `
[
  {
    "caution": false,
    "glyph": "●",
    "ink": "#0f172a",
    "label": "Observed",
    "labelOpacity": 1,
    "level": "L0",
    "markOpacity": 1,
    "srWord": "Observed",
    "strokeDasharray": "none",
    "texture": "solid",
  },
  {
    "caution": false,
    "glyph": "◈",
    "ink": "#0f172a",
    "label": "Derived (math)",
    "labelOpacity": 1,
    "level": "L1",
    "markOpacity": 1,
    "srWord": "Derived (math)",
    "strokeDasharray": "none",
    "texture": "solid",
  },
  {
    "caution": false,
    "glyph": "◧",
    "ink": "#0f172a",
    "label": "AI-organized",
    "labelOpacity": 1,
    "level": "L2",
    "markOpacity": 0.85,
    "srWord": "AI-organized",
    "strokeDasharray": "none",
    "texture": "solid",
  },
  {
    "caution": true,
    "glyph": "◑",
    "ink": "#b45309",
    "label": "AI reading",
    "labelOpacity": 1,
    "level": "L3",
    "markOpacity": 0.6,
    "srWord": "AI reading",
    "strokeDasharray": "6 3",
    "texture": "hatch45",
  },
]
`;

exports[`Lumen — chart geometry + data-table peer (Phase 1, §9/§15) > plot geometry (snapshot) 1`] = `
{
  "bandPath": "M 44,260 L 464,27.5 L 464,67.5 L 44,220.1 Z",
  "box": {
    "h": 280,
    "padB": 34,
    "padL": 44,
    "padR": 16,
    "padT": 16,
    "w": 480,
  },
  "maxX": 10,
  "minX": 1,
  "phaseLines": [
    {
      "fromPhase": "baseline",
      "sx": 254,
      "toPhase": "tier2",
      "x": 5.5,
    },
  ],
  "points": [
    {
      "phase": "baseline",
      "sx": 44,
      "sy": 226.8,
      "x": 1,
      "y": 42,
    },
    {
      "phase": "baseline",
      "sx": 90.7,
      "sy": 202.9,
      "x": 2,
      "y": 45,
    },
    {
      "phase": "baseline",
      "sx": 137.3,
      "sy": 210.9,
      "x": 3,
      "y": 44,
    },
    {
      "phase": "baseline",
      "sx": 184,
      "sy": 178.9,
      "x": 4,
      "y": 48,
    },
    {
      "phase": "baseline",
      "sx": 230.7,
      "sy": 186.9,
      "x": 5,
      "y": 47,
    },
    {
      "phase": "tier2",
      "sx": 277.3,
      "sy": 139,
      "x": 6,
      "y": 53,
    },
    {
      "phase": "tier2",
      "sx": 324,
      "sy": 99.1,
      "x": 7,
      "y": 58,
    },
    {
      "phase": "tier2",
      "sx": 370.7,
      "sy": 75.1,
      "x": 8,
      "y": 61,
    },
    {
      "phase": "tier2",
      "sx": 417.3,
      "sy": 83.1,
      "x": 9,
      "y": 60,
    },
    {
      "phase": "tier2",
      "sx": 464,
      "sy": 35.2,
      "x": 10,
      "y": 66,
    },
  ],
  "trendPath": "M 44,240 L 464,47.5",
  "xTicks": [
    {
      "sx": 44,
      "x": 1,
    },
    {
      "sx": 90.7,
      "x": 2,
    },
    {
      "sx": 137.3,
      "x": 3,
    },
    {
      "sx": 184,
      "x": 4,
    },
    {
      "sx": 230.7,
      "x": 5,
    },
    {
      "sx": 277.3,
      "x": 6,
    },
    {
      "sx": 324,
      "x": 7,
    },
    {
      "sx": 370.7,
      "x": 8,
    },
    {
      "sx": 417.3,
      "x": 9,
    },
    {
      "sx": 464,
      "x": 10,
    },
  ],
  "y0": 39.6,
  "y1": 68.4,
  "yTicks": [
    {
      "sy": 246,
      "y": 39.6,
    },
    {
      "sy": 188.5,
      "y": 46.8,
    },
    {
      "sy": 131,
      "y": 54,
    },
    {
      "sy": 73.5,
      "y": 61.2,
    },
    {
      "sy": 16,
      "y": 68.4,
    },
  ],
}
`;

exports[`Lumen — chart geometry + data-table peer (Phase 1, §9/§15) > the SR data-table peer carries a Level column + phase-boundary row + per-segment slopes (snapshot) 1`] = `
{
  "columns": [
    "Week (x)",
    "WCPM (y)",
    "Phase",
    "Level",
  ],
  "level": "L1",
  "perSegment": [
    {
      "n": 5,
      "phase": "baseline",
      "slope": 1.3,
    },
    {
      "n": 5,
      "phase": "tier2",
      "slope": 2.8,
    },
  ],
  "rows": [
    {
      "level": "Derived (math)",
      "phase": "baseline",
      "x": 1,
      "y": 42,
    },
    {
      "level": "Derived (math)",
      "phase": "baseline",
      "x": 2,
      "y": 45,
    },
    {
      "level": "Derived (math)",
      "phase": "baseline",
      "x": 3,
      "y": 44,
    },
    {
      "level": "Derived (math)",
      "phase": "baseline",
      "x": 4,
      "y": 48,
    },
    {
      "level": "Derived (math)",
      "phase": "baseline",
      "x": 5,
      "y": 47,
    },
    {
      "boundary": true,
      "label": "phase boundary: baseline → tier2",
    },
    {
      "level": "Derived (math)",
      "phase": "tier2",
      "x": 6,
      "y": 53,
    },
    {
      "level": "Derived (math)",
      "phase": "tier2",
      "x": 7,
      "y": 58,
    },
    {
      "level": "Derived (math)",
      "phase": "tier2",
      "x": 8,
      "y": 61,
    },
    {
      "level": "Derived (math)",
      "phase": "tier2",
      "x": 9,
      "y": 60,
    },
    {
      "level": "Derived (math)",
      "phase": "tier2",
      "x": 10,
      "y": 66,
    },
  ],
  "summary": "Trend chart. Derived (math): WCPM rose ~2.68 words/min per step (95% interval +2.12 to +3.23; n=10). A human-set phase line at week 5.5 divides baseline from tier2.",
}
`;

exports[`Lumen — dot & box chart types > box geometry: one five-number box per phase, ordered min<=q1<=median<=q3<=max (snapshot) 1`] = `
{
  "box": {
    "h": 280,
    "padB": 34,
    "padL": 44,
    "padR": 16,
    "padT": 16,
    "w": 480,
  },
  "boxes": [
    {
      "bw": 48,
      "cx": 149,
      "iqr": 3,
      "level": "L0",
      "max": 48,
      "median": 45,
      "min": 42,
      "n": 5,
      "phase": "baseline",
      "q1": 44,
      "q3": 47,
      "syMax": 178.9,
      "syMed": 202.9,
      "syMin": 226.8,
      "syQ1": 210.9,
      "syQ3": 186.9,
    },
    {
      "bw": 48,
      "cx": 359,
      "iqr": 3,
      "level": "L0",
      "max": 66,
      "median": 60,
      "min": 53,
      "n": 5,
      "phase": "tier2",
      "q1": 58,
      "q3": 61,
      "syMax": 35.2,
      "syMed": 83.1,
      "syMin": 139,
      "syQ1": 99.1,
      "syQ3": 75.1,
    },
  ],
  "chartType": "box",
  "xTicks": [
    {
      "label": "baseline",
      "sx": 149,
    },
    {
      "label": "tier2",
      "sx": 359,
    },
  ],
  "y0": 39.6,
  "y1": 68.4,
  "yTicks": [
    {
      "sy": 246,
      "y": 39.6,
    },
    {
      "sy": 188.5,
      "y": 46.8,
    },
    {
      "sy": 131,
      "y": 54,
    },
    {
      "sy": 73.5,
      "y": 61.2,
    },
    {
      "sy": 16,
      "y": 68.4,
    },
  ],
}
`;

exports[`Lumen — dot & box chart types > dot geometry: one L0 point per observation, no line, no bars (snapshot) 1`] = `
{
  "box": {
    "h": 280,
    "padB": 34,
    "padL": 44,
    "padR": 16,
    "padT": 16,
    "w": 480,
  },
  "chartType": "dot",
  "dots": [
    {
      "level": "L0",
      "phase": "baseline",
      "sx": 44,
      "sy": 226.8,
      "x": 1,
      "y": 42,
    },
    {
      "level": "L0",
      "phase": "baseline",
      "sx": 90.7,
      "sy": 202.9,
      "x": 2,
      "y": 45,
    },
    {
      "level": "L0",
      "phase": "baseline",
      "sx": 137.3,
      "sy": 210.9,
      "x": 3,
      "y": 44,
    },
    {
      "level": "L0",
      "phase": "baseline",
      "sx": 184,
      "sy": 178.9,
      "x": 4,
      "y": 48,
    },
    {
      "level": "L0",
      "phase": "baseline",
      "sx": 230.7,
      "sy": 186.9,
      "x": 5,
      "y": 47,
    },
    {
      "level": "L0",
      "phase": "tier2",
      "sx": 277.3,
      "sy": 139,
      "x": 6,
      "y": 53,
    },
    {
      "level": "L0",
      "phase": "tier2",
      "sx": 324,
      "sy": 99.1,
      "x": 7,
      "y": 58,
    },
    {
      "level": "L0",
      "phase": "tier2",
      "sx": 370.7,
      "sy": 75.1,
      "x": 8,
      "y": 61,
    },
    {
      "level": "L0",
      "phase": "tier2",
      "sx": 417.3,
      "sy": 83.1,
      "x": 9,
      "y": 60,
    },
    {
      "level": "L0",
      "phase": "tier2",
      "sx": 464,
      "sy": 35.2,
      "x": 10,
      "y": 66,
    },
  ],
  "maxX": 10,
  "minX": 1,
  "phaseLines": [
    {
      "fromPhase": "baseline",
      "sx": 254,
      "toPhase": "tier2",
      "x": 5.5,
    },
  ],
  "xTicks": [
    {
      "sx": 44,
      "x": 1,
    },
    {
      "sx": 90.7,
      "x": 2,
    },
    {
      "sx": 137.3,
      "x": 3,
    },
    {
      "sx": 184,
      "x": 4,
    },
    {
      "sx": 230.7,
      "x": 5,
    },
    {
      "sx": 277.3,
      "x": 6,
    },
    {
      "sx": 324,
      "x": 7,
    },
    {
      "sx": 370.7,
      "x": 8,
    },
    {
      "sx": 417.3,
      "x": 9,
    },
    {
      "sx": 464,
      "x": 10,
    },
  ],
  "y0": 39.6,
  "y1": 68.4,
  "yTicks": [
    {
      "sy": 246,
      "y": 39.6,
    },
    {
      "sy": 188.5,
      "y": 46.8,
    },
    {
      "sy": 131,
      "y": 54,
    },
    {
      "sy": 73.5,
      "y": 61.2,
    },
    {
      "sy": 16,
      "y": 68.4,
    },
  ],
}
`;

exports[`Lumen — histogram chart type (distribution of values) > histogram geometry: bins over values, y=count, all L0, no points/bars (snapshot) 1`] = `
{
  "baseline": 246,
  "bins": [
    {
      "bh": 230,
      "bw": 103,
      "bx": 45,
      "by": 16,
      "count": 4,
      "hi": 48,
      "level": "L0",
      "lo": 42,
    },
    {
      "bh": 115,
      "bw": 103,
      "bx": 150,
      "by": 131,
      "count": 2,
      "hi": 54,
      "level": "L0",
      "lo": 48,
    },
    {
      "bh": 57.5,
      "bw": 103,
      "bx": 255,
      "by": 188.5,
      "count": 1,
      "hi": 60,
      "level": "L0",
      "lo": 54,
    },
    {
      "bh": 172.5,
      "bw": 103,
      "bx": 360,
      "by": 73.5,
      "count": 3,
      "hi": 66,
      "level": "L0",
      "lo": 60,
    },
  ],
  "box": {
    "h": 280,
    "padB": 34,
    "padL": 44,
    "padR": 16,
    "padT": 16,
    "w": 480,
  },
  "chartType": "histogram",
  "max": 66,
  "maxCount": 4,
  "min": 42,
  "xTicks": [
    {
      "sx": 44,
      "value": 42,
    },
    {
      "sx": 149,
      "value": 48,
    },
    {
      "sx": 254,
      "value": 54,
    },
    {
      "sx": 359,
      "value": 60,
    },
    {
      "sx": 464,
      "value": 66,
    },
  ],
  "yTicks": [
    {
      "count": 0,
      "sy": 246,
    },
    {
      "count": 1,
      "sy": 188.5,
    },
    {
      "count": 2,
      "sy": 131,
    },
    {
      "count": 3,
      "sy": 73.5,
    },
    {
      "count": 4,
      "sy": 16,
    },
  ],
}
`;

exports[`Lumen — the Reyna worked scenario (golden master) > full series + a 6-of-10 subset (snapshot) 1`] = `
{
  "full": {
    "bootstrap": [
      2.27,
      3.25,
    ],
    "id": "full",
    "intercept": 37.67,
    "interval": [
      2.12,
      3.23,
    ],
    "level": "L1",
    "n": 10,
    "r": 0.97,
    "shownOf": {
      "shown": 10,
      "total": 10,
    },
    "slope": 2.68,
    "small": false,
    "text": "Derived (math): WCPM rose ~2.68 words/min per step (95% interval +2.12 to +3.23; n=10).",
  },
  "subset": {
    "bootstrap": [
      0.84,
      2.87,
    ],
    "id": "subset",
    "intercept": 40,
    "interval": [
      0.65,
      3.06,
    ],
    "level": "L1",
    "n": 6,
    "r": 0.91,
    "shownOf": {
      "shown": 6,
      "total": 10,
    },
    "slope": 1.86,
    "small": true,
    "text": "Derived (math): across these 6 of 10 probes, WCPM rose ~1.86 words/min per step (95% interval +0.65 to +3.06; n=6, small).",
  },
  "tooFew": {
    "id": "tooFew",
    "level": "L1",
    "n": 2,
    "refused": true,
    "shownOf": {
      "shown": 2,
      "total": 10,
    },
    "text": "Derived (math): n=2 — too few points to estimate a trend; no line drawn (need at least 3).",
  },
}
`;
